--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <p> Fav Song By Me 
         <ul>1. IDLY - MCR</ul>
+        <ul>2. Multo - Cup Of Joe </ul>
+        <ul>3. Daylight - Kusher</ul>
     </p>
 </body>
 </html>
